Fixes alignment issues for address

--- a/src/client/styles/footer.scss
+++ b/src/client/styles/footer.scss
@@ -5,11 +5,18 @@
   padding-right: 50px;
 }
 
-.container {
+.linkSectionContainer{
   border-bottom: 1px solid #979797;
+  padding: 0;
+  margin-left: 150px;
+  margin-right: 150px;
+}
+
+.linkSubject {
   padding-left: 0px;
-  padding-right: 0px;
+  padding-right: 5px;
   padding-bottom: 30px;
+
 }
 
 .footer ul {
@@ -37,25 +44,26 @@
 
 .bottom {
   padding-top: 30px;
-  padding-bottom: 20px;
+  padding-bottom: 70px;
+  margin-left: 150px;
+  margin-right: 150px;
+  padding-left: 0;
+  padding-right: 0;
+}
+
+.social{
+  padding: 0;
+  margin: 0;
 }
 
 .address {
-  font-size: 12px;
-  text-align: right;
+  padding: 0;
 }
 
 .address div{
-  float: left;
-  margin-right: 0;
-  text-align: right;
-  padding-right: 5px;
+  font-size: 16px;
+  padding: 0;
+  margin: 0;
 }
 
-.address div:not(:first-child) {
-  border-left: 1px solid #000000;
-  margin-left: 0;
-  padding-left: 10px;
-  float: right;
-}
 
